[cmake] Correctly generate object aliases

--- a/src/mc_robots/CMakeLists.txt
+++ b/src/mc_robots/CMakeLists.txt
@@ -20,7 +20,7 @@ macro(append_aliases PATH VAR NAME)
   file(GLOB URDF_FILES ${PATH}/urdf/*.urdf)
   foreach(URDF ${URDF_FILES})
     get_filename_component(URDF_NAME "${URDF}" NAME_WE)
-    list(APPEND ${VAR} "${NAME}/${URDF_NAME}: [${NAME}, ${PATH}, ${URDF_NAME}]")
+    list(APPEND ${VAR} "${NAME}/${URDF_NAME}: [${NAME}, \"${PATH}\", ${URDF_NAME}]")
   endforeach()
   string(REPLACE ";" "\n" ${VAR} "${${VAR}}")
 endmacro()
@@ -35,8 +35,8 @@ macro(generate_aliases PATH ALIASES FILE_IN FILE_OUT)
   install(FILES "${PATH_OUT}" DESTINATION "${MC_ROBOTS_INSTALL_PREFIX}/aliases/")
 endmacro()
 
-append_aliases("${OBJECT_ALIASES}" ENV_ALIASES env)
-generate_aliases("${MC_INT_OBJ_DESCRIPTION_PATH}" ${OBJECT_ALIASES} object object_aliases.in.yml object_aliases.yml)
+append_aliases("${MC_INT_OBJ_DESCRIPTION_PATH}" OBJECT_ALIASES object)
+generate_aliases("${MC_INT_OBJ_DESCRIPTION_PATH}" ${OBJECT_ALIASES} object_aliases.in.yml object_aliases.yml)
 
 append_aliases("${MC_ENV_DESCRIPTION_PATH}" ENV_ALIASES env)
 append_aliases("${MC_INT_OBJ_DESCRIPTION_PATH}" ENV_ALIASES env)
