--- a/doc/_data/interfaces.yml
+++ b/doc/_data/interfaces.yml
@@ -26,6 +26,13 @@
   pkg:
     name: mc_naoqi
     url: https://github.com/jrl-umi3218/mc_naoqi
+- name: libfranka
+  desc: libfranka is the interface used to control Franka Emika robots. The mc_franka interface allows to use mc_rtc to control these robots. It provides multiple robot support for all operation modes (position, velocity and torques) as well as integration with the panda pump device.
+  url: https://github.com/frankaemika/libfranka
+  icon: mc_franka.png
+  pkg:
+    name: mc_franka
+    url: https://github.com/jrl-umi3218/mc_franka
 - name: UDP Communication
   desc: A generic UDP-based client/server interface implementation. The client is a regular mc_rtc interface that gets data through UDP sockets. The server can easily be implemented to interface with your own robot.<br />The following server implementations are currently available&#58; <ul><li>An OpenRTM server is provided and may be used with HRP robots.</li><li>A server implementation is also available for the <a href="https://hal.archives-ouvertes.fr/hal-02101562">BAZAR</a> robot.</li></ul>
   url: https://openrtm.org/openrtm/
