[doc] Add TOC to all tutorials

--- a/doc/_config.yml
+++ b/doc/_config.yml
@@ -9,6 +9,7 @@ plugins:
     - jekyll-sitemap
     - liquefy
     - jekyll_inline_highlight
+    - jekyll-toc
 exclude:
     - Gemfile
     - Gemfile.lock
