--- a/doc/_data/robots.yml
+++ b/doc/_data/robots.yml
@@ -25,6 +25,15 @@
     module:
       url: https://gite.lirmm.fr/mc-hrp4/mc_hrp4j
       name: mc_hrp4j
+- name: HRP-4CR
+  icon: hrp4cr.jpg
+  pkg:
+    desc:
+      url: https://github.com/isri-aist/hrp4cr_description
+      name: hrp4cr_description
+    module:
+      url: https://github.com/isri-aist/mc_hrp4cr
+      name: mc_hrp4cr
 - name: HRP-5P
   icon: hrp5p.jpg
   pkg:
