--- a/tests/controllers/TestFSMStateOptions.in.yaml
+++ b/tests/controllers/TestFSMStateOptions.in.yaml
@@ -18,10 +18,13 @@ contacts:
     r2: ground
     r1Surface: RightFoot
     r2Surface: AllGround
+collisions:
+  - type: collision
+    useMinimal: true
 states:
   TestContactsManipulation:
     base: HalfSitting
-    RemoveContacts:
+    RemoveContacts: &default-contacts
       - r1: jvrc1
         r2: ground
         r1Surface: LeftFoot
@@ -30,7 +33,7 @@ states:
         r2: ground
         r1Surface: RightFoot
         r2Surface: AllGround
-    AddContacts:
+    AddContacts: &special-contacts
       - r1: jvrc1
         r2: ground
         r1Surface: LeftFootCenter
@@ -42,27 +45,30 @@ states:
         r2Surface: AllGround
         friction: 0.8
         dof: [1, 1, 0, 1, 1, 1]
-    AddContactsAfter:
+    AddContactsAfter: *default-contacts
+    RemoveContactsAfter: *special-contacts
+  TestCollisionsManipulation:
+    base: HalfSitting
+    AddCollisions: &robot-ground-collisions
       - r1: jvrc1
         r2: ground
-        r1Surface: LeftFoot
-        r2Surface: AllGround
+        collisions:
+          - body1: L_WRIST_Y_S
+            body2: ground
+            iDist: 0.05
+            sDist: 0.01
+            damping: 0
+    RemoveCollisionsAfter: *robot-ground-collisions
+    RemoveCollisions: &robot-self-collisions
       - r1: jvrc1
-        r2: ground
-        r1Surface: RightFoot
-        r2Surface: AllGround
-    RemoveContactsAfter:
-      - r1: jvrc1
-        r2: ground
-        r1Surface: LeftFootCenter
-        r2Surface: AllGround
-        friction: 0.8
-      - r1: jvrc1
-        r2: ground
-        r1Surface: RightFootCenter
-        r2Surface: AllGround
-        friction: 0.8
-        dof: [1, 1, 0, 1, 1, 1]
+        r2: jvrc1
+        collisions:
+          - body1: R_WRIST_Y_S
+            body2: R_HIP_Y_S
+            iDist: 0.05
+            sDist: 0.025
+            damping: 0
+    AddCollisionsAfter: *robot-self-collisions
   TestRemovePostureTask:
     base: HalfSitting
     RemovePostureTask: true
@@ -76,5 +82,6 @@ states:
             dof: [1, 1, 1, 1, 1, 1]
             speed: [0, 0, 0, 0, 0, 0.001]
 transitions:
-  - [TestContactsManipulation, OK, TestRemovePostureTask, Auto]
+  - [TestContactsManipulation, OK, TestCollisionsManipulation, Auto]
+  - [TestCollisionsManipulation, OK, TestRemovePostureTask, Auto]
   - [TestRemovePostureTask, OK, TestConstraints, Auto]
