[mc_control] When loading the collisions entry add type if needed

--- a/tests/controllers/TestFSMStateOptions.in.yaml
+++ b/tests/controllers/TestFSMStateOptions.in.yaml
@@ -19,8 +19,7 @@ contacts:
     r1Surface: RightFoot
     r2Surface: AllGround
 collisions:
-  - type: collision
-    useMinimal: true
+  - useMinimal: true
 states:
   TestContactsManipulation:
     base: HalfSitting
