[mc_control] Load constraints in State from a map
Makes it easier to extend the constraint configuration

--- a/tests/controllers/TestFSMStateOptions.in.yaml
+++ b/tests/controllers/TestFSMStateOptions.in.yaml
@@ -74,7 +74,8 @@ states:
   TestConstraints:
     base: HalfSitting
     constraints:
-      - type: boundedSpeed
+      boundedSpeed:
+        type: boundedSpeed
         robot: jvrc1
         constraints:
           - body: l_wrist
