--- a/doc/_data/carousel.yml
+++ b/doc/_data/carousel.yml
@@ -4,3 +4,5 @@
   youtube: vFCFKAunsYM
 - desc: "Humanoid in aircraft manufacturing: operating a circuit-breaker"
   youtube: C3Y2Xc6sEY4
+- desc: "Human-Robot Interaction Applications"
+  youtube: qzEnCGlT93s
