Add MC_RTC_BUILD_STATIC option
This option builds a static variant of mc_rtc

Current caveats:
- Require linking with -Wl,--whole-archive to bring in registration
- Only RobotModule are loaded for now
- Need to fix SHARED library generation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ option(ENABLE_FAST_TESTS "Run controllers tests for a few iterations" OFF)
 
 option(BUILD_BENCHMARKS "Build benchmarks" OFF)
 
+option(MC_RTC_BUILD_STATIC "Build a static version of mc_rtc, this has no support for pluggable components" OFF)
 option(MC_RTC_DISABLE_NETWORK "Do not build with network support" OFF)
 
 option(DISABLE_ROS "Do not build with ROS support (even if ROS was found)" OFF)
@@ -69,8 +70,10 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/CMakeModules)
 # hpp-spline (defines target: mc_rtc_3rd_party::hpp-spline)
 find_package(mc_rtc_3rd_party_hpp-spline REQUIRED)
 
-# LTDL (defines target: mc_rtc_3rd_party::ltdl)
-add_subdirectory(3rd-party/ltdl)
+if(NOT MC_RTC_BUILD_STATIC)
+  # LTDL (defines target: mc_rtc_3rd_party::ltdl)
+  add_subdirectory(3rd-party/ltdl)
+endif()
 
 # GEOS (defines/imports target: GEOS::geos)
 find_package(mc_rtc_3rd_party_geos REQUIRED)
@@ -103,18 +106,20 @@ add_project_dependency(spdlog 1.6.1 REQUIRED)
 macro(find_description_package PACKAGE)
   set(PACKAGE_PATH_VAR "${PACKAGE}_PATH")
   string(TOUPPER "${PACKAGE_PATH_VAR}" PACKAGE_PATH_VAR)
-  find_package(${PACKAGE} REQUIRED)
-  if("${${PACKAGE}_INSTALL_PREFIX}" STREQUAL "")
-    if("${${PACKAGE}_SOURCE_PREFIX}" STREQUAL "")
-      message(FATAL_ERROR "Your ${PACKAGE} does not define where to find the data, please update.")
+  if(NOT DEFINED ${PACKAGE_PATH_VAR})
+    find_package(${PACKAGE} REQUIRED)
+    if("${${PACKAGE}_INSTALL_PREFIX}" STREQUAL "")
+      if("${${PACKAGE}_SOURCE_PREFIX}" STREQUAL "")
+        message(FATAL_ERROR "Your ${PACKAGE} does not define where to find the data, please update.")
+      else()
+        set(${PACKAGE_PATH_VAR} "${${PACKAGE}_SOURCE_PREFIX}")
+      endif()
     else()
-      set(${PACKAGE_PATH_VAR} "${${PACKAGE}_SOURCE_PREFIX}")
+      set(${PACKAGE_PATH_VAR} "${${PACKAGE}_INSTALL_PREFIX}")
     endif()
-  else()
-    set(${PACKAGE_PATH_VAR} "${${PACKAGE}_INSTALL_PREFIX}")
+    # Cleanup the path provided by CMake
+    get_filename_component(${PACKAGE_PATH_VAR} "${${PACKAGE_PATH_VAR}}" REALPATH)
   endif()
-  # Cleanup the path provided by CMake
-  get_filename_component(${PACKAGE_PATH_VAR} "${${PACKAGE_PATH_VAR}}" REALPATH)
   message("-- Found ${PACKAGE}: ${${PACKAGE_PATH_VAR}}")
 endmacro()
 
