[doc] Add HRP-5P torqueing video

--- a/doc/_data/carousel.yml
+++ b/doc/_data/carousel.yml
@@ -6,3 +6,5 @@
   youtube: C3Y2Xc6sEY4
 - desc: "Human-Robot Interaction Applications"
   youtube: qzEnCGlT93s
+- desc: "HRP-5P performing bolt fastening with visual servoing"
+  youtube: FT2CD1UiExs
