[cmake] Do not include files that do no exist with MC_RTC_BUILD_STATIC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -195,6 +195,10 @@ install(
 install(FILES "src/mc_rtcMacros.cmake"
         DESTINATION "${CONFIG_INSTALL_DIR}")
 set(PACKAGE_EXTRA_MACROS "${PACKAGE_EXTRA_MACROS}
-include(\"\${CMAKE_CURRENT_LIST_DIR}/mc_rtcMacros.cmake\")
+include(\"\${CMAKE_CURRENT_LIST_DIR}/mc_rtcMacros.cmake\")")
+
+if(NOT MC_RTC_BUILD_STATIC)
+  set(PACKAGE_EXTRA_MACROS "${PACKAGE_EXTRA_MACROS}
 include(\"\${CMAKE_CURRENT_LIST_DIR}/mc_rtc_fsm_states.cmake\")
 include(\"\${CMAKE_CURRENT_LIST_DIR}/mc_rtc_observers.cmake\")")
+endif()
