--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Vcs-Browser: https://github.com/jrl-umi3218/mc_rtc
 Build-Depends: debhelper (>= 9),
                cmake,
                doxygen,
+               graphviz,
                libboost-filesystem-dev,
                libboost-program-options-dev,
                libboost-regex-dev,
@@ -21,7 +22,7 @@ Build-Depends: debhelper (>= 9),
                libmc-rbdyn-urdf-dev,
                libgeos++-dev,
                mc-rtc-data,
-               python,
+               python-is-python3|python,
                python-all,
                python-dev,
                python-enum34,
