[state-observation] add the package dependency

--- a/debian/control
+++ b/debian/control
@@ -20,6 +20,7 @@ Build-Depends: debhelper (>= 9),
                libtasks-qld-dev|libtasks-dev,
                libeigen-quadprog-dev,
                libmc-rbdyn-urdf-dev,
+               libstate-observation-dev,
                libgeos++-dev,
                mc-rtc-data,
                python-is-python3|python,
