[samples] add mc_impedance_controller.

--- a/src/mc_control/CMakeLists.txt
+++ b/src/mc_control/CMakeLists.txt
@@ -50,6 +50,7 @@ if(${BUILD_CONTROLLER_SAMPLES})
   add_subdirectory(samples/Door)
   add_subdirectory(samples/LIPMStabilizer)
   add_subdirectory(samples/Admittance)
+  add_subdirectory(samples/Impedance)
 endif()
 
 add_subdirectory(HalfSitPose)
