--- a/debian/control
+++ b/debian/control
@@ -17,6 +17,7 @@ Build-Depends: debhelper (>= 9),
                libboost-test-dev,
                libboost-thread-dev,
                libboost-timer-dev,
+               libboost-random-dev,
                libtasks-qld-dev|libtasks-dev,
                libeigen-quadprog-dev,
                libmc-rbdyn-urdf-dev,
