[debian] Add dependency to libmc-rtc-dev

--- a/debian/control
+++ b/debian/control
@@ -63,6 +63,7 @@ Depends: cmake,
          libtasks-qld-dev|libtasks-dev,
          libeigen-quadprog-dev,
          libmc-rbdyn-urdf-dev,
+         libstate-observation-dev,
          libgeos++-dev,
          libnanomsg-dev,
          libhpp-spline-dev,
