--- a/src/mc_control/CMakeLists.txt
+++ b/src/mc_control/CMakeLists.txt
@@ -51,6 +51,7 @@ if(${BUILD_CONTROLLER_SAMPLES})
   add_subdirectory(samples/LIPMStabilizer)
   add_subdirectory(samples/Admittance)
   add_subdirectory(samples/Impedance)
+  add_subdirectory(samples/PreviewControlWalking)
 endif()
 
 add_subdirectory(HalfSitPose)
