[doc] Add tutorial about sample controllers

--- a/doc/_data/tutorials.yml
+++ b/doc/_data/tutorials.yml
@@ -120,6 +120,9 @@
   desc: This section explains the sample controllers
   tutorials:
     -
+      id: list-of-samples 
+      title: Available sample controllers 
+    -
       id: sample-admittance
       title: Admittance sample controller
 -
