--- a/doc/_data/schemas/mc_rbdyn/StabilizerConfiguration.json
+++ b/doc/_data/schemas/mc_rbdyn/StabilizerConfiguration.json
@@ -4,7 +4,7 @@
     {
       "type": "object",
       "title": "mc_rbdyn::lipm_stabilizer::StabilizerConfiguration",
-      "description": "Stabilizer configuration (DCM tracking, admittance, tasks weights, etc). A default configuration for these configuration entries is provided by each robot's {% doxygen mc_rbdyn::RobotModule %}."
+      "description": "Configuration of {% doxygen mc_tasks::lipm_stabilizer::StabilizerTask %} stabilization parameters (DCM tracking, admittance, tasks weights, etc). A default configuration is provided by each robot's {% doxygen mc_rbdyn::RobotModule %}."
     },
     {
       "$ref": "/../../common/StabilizerConfiguration.json"
