Generate proper vcxproj.user files for controller tests

--- a/tests/controllers/CMakeLists.txt
+++ b/tests/controllers/CMakeLists.txt
@@ -15,6 +15,19 @@ else()
   set(LOG_DIRECTORY "/tmp")
 endif()
 
+macro(mc_rtc_add_test)
+cmake_parse_arguments(MC_RTC_TEST "" "NAME;COMMAND" "" ${ARGN} )
+string(REPLACE ";" " " CMD_ARGS "${MC_RTC_TEST_UNPARSED_ARGUMENTS}") #Not robust to having ';' inside an arg. Could use list(JOIN ...) in CMake>=3.12
+add_test(${ARGN})
+
+# Adding a project configuration file (for MSVC only)
+string(REPLACE "<CONFIG>" "(Configuration)" CMD_ARGS ${CMD_ARGS})
+string(REPLACE "<CONFIGURATION>" "(Configuration)" CMD_ARGS ${CMD_ARGS})
+generate_msvc_dot_user_file(NAME ${MC_RTC_TEST_NAME}
+                            COMMAND "$(SolutionDir)tests/$(Configuration)/${MC_RTC_TEST_COMMAND}.exe"
+                            COMMAND_ARGS ${CMD_ARGS})
+endmacro()
+
 macro(controller_test_common NAME)
   if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${NAME}.in.cpp)
     set(${NAME}_SRC ${CMAKE_CURRENT_BINARY_DIR}/${NAME}/${NAME}.cpp)
@@ -49,8 +62,6 @@ macro(controller_test_common NAME)
     set(TEST_CONTROLLER_PATH "${TEST_CONTROLLER_PATH}/$<CONFIGURATION>")
   endif()
   configure_file(${CMAKE_CURRENT_SOURCE_DIR}/mc_rtc.conf.in ${CMAKE_CURRENT_BINARY_DIR}/${NAME}/mc_rtc-${NAME}.conf)
-  # Adding a project configuration file (for MSVC only)
-  generate_msvc_dot_user_file(${NAME})
 endmacro()
 
 macro(controller_test_construction_failure NAME)
@@ -64,7 +75,7 @@ macro(controller_test_construction_failure NAME)
     set(CONFIG_OUT "${CMAKE_CURRENT_BINARY_DIR}/${NAME}/mc_rtc-${NAME}.conf")
   endif()
   set_target_properties(${NAME} PROPERTIES FOLDER tests/controllers/failure)
-  add_test(NAME ${NAME} COMMAND test_controller_ticker --run_test=CONSTRUCTION_FAILURE -- ${CONFIG_OUT})
+  mc_rtc_add_test(NAME ${NAME} COMMAND test_controller_ticker --run_test=CONSTRUCTION_FAILURE -- ${CONFIG_OUT})
 endmacro()
 
 macro(controller_test_run NAME NRITER)
@@ -95,7 +106,7 @@ macro(controller_test_run NAME NRITER)
   else()
     set(ACTUALITER ${NRITER})
   endif()
-  add_test(NAME ${NAME} COMMAND test_controller_ticker --run_test=RUN -- ${CONFIG_OUT} ${ACTUALITER})
+  mc_rtc_add_test(NAME ${NAME} COMMAND test_controller_ticker --run_test=RUN -- ${CONFIG_OUT} ${ACTUALITER})
 endmacro()
 
 controller_test_construction_failure(NotAController)
@@ -116,7 +127,7 @@ if(NOT DEFINED PYTHON_DEB_ROOT)
   else()
     set(NRITER 400)
   endif()
-  add_test(NAME TestPostureControllerLog COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "TestPostureController" ${NRITER} ${UTILS_BIN_DIR})
+  mc_rtc_add_test(NAME TestPostureControllerLog COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "TestPostureController" ${NRITER} ${UTILS_BIN_DIR})
 
   # Test threaded log policy
   set(LOG_POLICY "threaded")
@@ -132,8 +143,8 @@ if(NOT DEFINED PYTHON_DEB_ROOT)
   else()
     set(NRITER 1500)
   endif()
-  add_test(NAME TestPostureControllerThreadedLogging COMMAND test_controller_ticker --run_test=RUN -- "${CONFIG_OUT}" ${NRITER})
-  add_test(NAME TestPostureControllerThreadedLog COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "TestPostureController" ${NRITER} "${UTILS_BIN_DIR}")
+  mc_rtc_add_test(NAME TestPostureControllerThreadedLogging COMMAND test_controller_ticker --run_test=RUN -- "${CONFIG_OUT}" ${NRITER})
+  mc_rtc_add_test(NAME TestPostureControllerThreadedLog COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "TestPostureController" ${NRITER} "${UTILS_BIN_DIR}")
 
   # Test controller switch and threaded log policy
   add_library(TestPostureController2 SHARED TestPostureController2.cpp)
@@ -160,9 +171,9 @@ if(NOT DEFINED PYTHON_DEB_ROOT)
   else()
     set(NRITER 1200)
   endif()
-  add_test(NAME TestPostureController2 COMMAND test_controller_ticker --run_test=RUN -- "${CONFIG_OUT}" ${NRITER} TestPostureController2)
-  add_test(NAME TestPostureControllerControllerSwitchThreadedLog COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "TestPostureController" ${NRITER} "${UTILS_BIN_DIR}")
-  add_test(NAME TestPostureController2ControllerSwitchThreadedLog COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "TestPostureController2" ${NRITER} "${UTILS_BIN_DIR}")
+  mc_rtc_add_test(NAME TestPostureController2 COMMAND test_controller_ticker --run_test=RUN -- "${CONFIG_OUT}" ${NRITER} TestPostureController2)
+  mc_rtc_add_test(NAME TestPostureControllerControllerSwitchThreadedLog COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "TestPostureController" ${NRITER} "${UTILS_BIN_DIR}")
+  mc_rtc_add_test(NAME TestPostureController2ControllerSwitchThreadedLog COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "TestPostureController2" ${NRITER} "${UTILS_BIN_DIR}")
 endif()
 
 set(LOG_POLICY "non-threaded")
@@ -220,7 +231,7 @@ macro(controller_sample_test_run NAME PATH_SUFFIX NRITER)
   else()
     set(ACTUALITER ${NRITER})
   endif()
-  add_test(NAME "TestSampleController_${NAME}" COMMAND test_controller_ticker --run_test=RUN -- ${CONFIG_OUT} ${ACTUALITER})
+  mc_rtc_add_test(NAME "TestSampleController_${NAME}" COMMAND test_controller_ticker --run_test=RUN -- ${CONFIG_OUT} ${ACTUALITER})
 endmacro()
 
 controller_sample_test_run(CoM "" 1000)
@@ -300,9 +311,9 @@ if(PYTHON_BINDING)
     else()
       set(NRITER 400)
     endif()
-    add_test(NAME "Test${PYTHON}Controller" COMMAND ${CMAKE_COMMAND} -E env "PYTHONPATH=${PYTHONPATH}${PATH_SEP}$ENV{PYTHONPATH}" ${CMAKE_COMMAND} -E env "${LDPATH_VAR}=${LDPATH}${PATH_SEP}${LDPATH_VAR}=${LDPATH_CONTROL}${PATH_SEP}$ENV{${LDPATH_VAR}}" $<TARGET_FILE:test_controller_ticker> --run_test=RUN -- "${CONFIG_OUT}" ${NRITER} "")
+    mc_rtc_add_test(NAME "Test${PYTHON}Controller" COMMAND ${CMAKE_COMMAND} -E env "PYTHONPATH=${PYTHONPATH}${PATH_SEP}$ENV{PYTHONPATH}" ${CMAKE_COMMAND} -E env "${LDPATH_VAR}=${LDPATH}${PATH_SEP}${LDPATH_VAR}=${LDPATH_CONTROL}${PATH_SEP}$ENV{${LDPATH_VAR}}" $<TARGET_FILE:test_controller_ticker> --run_test=RUN -- "${CONFIG_OUT}" ${NRITER} "")
     if(NOT DEFINED PYTHON_DEB_ROOT)
-      add_test(NAME Test${PYTHON}Log COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "${TEST_CONTROLLER_NAME}" ${NRITER} "${UTILS_BIN_DIR}")
+      mc_rtc_add_test(NAME Test${PYTHON}Log COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "${TEST_CONTROLLER_NAME}" ${NRITER} "${UTILS_BIN_DIR}")
     endif()
   endforeach()
   unset(OBSERVER_PIPELINES)
